--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@daily-co/daily-react": "^0.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-media-recorder": "^1.6.6",
     "react-scripts": "^5.0.1",
     "react-webcam": "^7.2.0",
     "recoil": "^0.7.7"
