--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
+    "@clerk/clerk-react": "^4.30.3",
     "@daily-co/daily-js": "^0.54.0",
     "@daily-co/daily-react": "^0.16.0",
+    "@supabase/supabase-js": "^2.39.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
